[package]
name = "aamn"
version = "0.2.0"
edition = "2021"

[dependencies]
# Cryptography
ring = "0.17"
snow = "0.9" # Noise Protocol Framework
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = "2.1"
chacha20poly1305 = "0.10"
blake2 = "0.10"
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12" # HKDF for key derivation

# Networking & Async
tokio = { version = "1.36", features = ["full"] }
quinn = "0.10" # QUIC implementation
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# System
tun = "0.6" # TUN interface for Windows/Linux
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rcgen = "0.11"
rustls = "0.21"

# Production dependencies
clap = { version = "4.5", features = ["derive"] }          # CLI
tracing = "0.1"                                            # Logging estructurado
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"                                   # Rotación de logs
thiserror = "1.0"                                          # Errores
directories = "5.0"                                        # Paths del sistema
toml = "0.8"                                               # Config file format
parking_lot = "0.12"                                       # Synchronization primitives

[dev-dependencies]
tokio-test = "0.4"
